--- a/templates/pesquisa/pesquisa.html
+++ b/templates/pesquisa/pesquisa.html
@@ -85,12 +85,12 @@
 
 </section>
 
-<section class="container-fluid p-md-5 p-3 ml-md-5">
+<section class="container-fluid p-lg-5 p-3 ml-lg-5">
     <div class="row ml-md-5">
 
-        <div class="col-md-3 col-12">
+        <div class="col-lg-3 col-12">
 
-            <div class="bg-light ml-md-5 mr-md-4 p-5" style="border-radius: 20px; color: rgb(74, 74, 74);">
+            <div class="bg-light ml-lg-5 mr-lg-4 p-5" style="border-radius: 20px; color: rgb(74, 74, 74);">
                 <div class="text-center">
                     <h5>Estado</h5>
                 </div>
@@ -120,10 +120,10 @@
 
         </form>
         
-        <div class="row col-md-7 col-12">
+        <div class="row col-lg-7 col">
 
             {% for product in products %}
-            <div class="col-12 mb-4" style="border-bottom: 1px solid #DADADA">
+            <div class="col-12 mb-1" style="border-bottom: 1px solid #DADADA; ">
 
                 <a class="texto-item" href="{% url 'detail_product' product.id %}">
 
@@ -131,14 +131,14 @@
 
                         <image src="{{ product.get_photo_url }}" class="rounded tamanho-imagens-pesquisa"> </image>
 
-                        <div class="row col-md-9 col-8 align-content-between">
-                            <p class="col-md-9 col-7 texto-item-nome ">{{ product.nome }}</p>
+                        <div class="row col-lg-9 col-8 col-sm-4">
+                            <p class="col-lg-9 col-4 texto-item-nome align-content-md-between">{{ product.nome }}</p>
 
-                            <p class="col-md-3 col-7" style="font-size: 20px;"><strong>R$ {{ product.preco }}</strong></p>
+                            <p class="col-lg-3 col-12" style="font-size: 20px; font-weight: 700;">R$ {{ product.preco }}</p>
 
-                            <p class="col-md-9 col-6 align-self-md-end">{{ product.estado }}<span>, {{ product.cidade }}</span></p>
+                            <p class="col-lg-9 col-12 align-self-md-end" style="font-size: 15px; font-weight: 500;">{{ product.estado }}<span>, {{ product.cidade }}</span></p>
 
-                            <p class="col-md-3 col-12">{{ product.date }}</p>
+                            <p class="col-lg-3 col-12 align-self-md-end" style="font-size: 15px; color:rgb(153, 153, 153); font-weight: 500;">{{ product.date }}</p>
                         </div>
 
 
