--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -45,43 +45,43 @@
                         <div class="row mt-3">
 
                             {% for product in products %}
-                            <div class="col-md-3 rounded pb-3 ml-md-5 ml-3 pt-2 mr-4 mt-3 mb-5 mt-md-0"
-                                style="border:1px solid #ccc">
+                            <a class="texto-meus-anuncios" href="{% url 'detail_product' product.id %}">
+                                <div class="col-md-3 rounded pb-3 ml-md-5 ml-3 pt-2 mr-4 mt-3 mb-5 mt-md-0"
+                                    style="border:1px solid #ccc">
 
-                                <image src="{{ product.get_photo_url }}"
-                                    class="rounded tamanho-fixo-imagens-myAnuncios"> </image>
-                                <div class="mt-2 mb-2">
-                                    <span>{{ product.nome }}</span>
-                                </div>
-                                <div class="mb-2">
-                                    <span><strong>R${{ product.preco }}</strong></span>
-                                </div>
-                                <div class="row justify-content-center">
-                                    <div class="mr-3">
-                                        <a href="{% url 'update_product' product.id %}"
-                                            class="btn btn-primary btn-block botao-redondo">
-                                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                                        </a>
+                                    <image src="{{ product.get_photo_url }}"
+                                        class="rounded tamanho-fixo-imagens-myAnuncios"> </image>
+                                    <div class="mt-2 mb-2">
+                                        <span class="h5">{{ product.nome }}</span>
                                     </div>
-                                    <div class="6">
-                                        <button type="button" onclick="prenecherExclusao({{product.id}})"
-                                            data-toggle="modal" data-target="#modal-exlusao"
-                                            class="btn btn-primary btn-block botao-redondo">
-                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                        </button>
+                                    <div class="mb-3">
+                                        <span class="h6"><strong>R${{ product.preco }}</strong></span>
                                     </div>
+                            </a>
+                            <div class="row justify-content-center">
+                                <div class="mr-5 pr-5"  style="border-right: 1px solid grey">
+                                    <a href="{% url 'update_product' product.id %}"
+                                        class="btn btn-primary btn-block botao-redondo">
+                                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                                    </a>
+                                </div>
+                                <div class="6">
+                                    <button type="button" onclick="prenecherExclusao({{product.id}})"
+                                        data-toggle="modal" data-target="#modal-exlusao"
+                                        class="btn btn-primary btn-block botao-redondo">
+                                        <i class="fa fa-trash" aria-hidden="true"></i>
+                                    </button>
                                 </div>
                             </div>
-
-                            {% empty %}
-                            <div class="col-12 justify-content-center">
-                                <img src="{% static 'images/imagem-sem-produtos-cadastrados.png' %}" alt="">
-                                <h4>Você ainda não adicionou um produto!</h4>
-                            </div>
-
-                            {% endfor %}
-
                         </div>
+
+                        {% empty %}
+                        <div class="col-12 justify-content-center">
+                            <img src="{% static 'images/imagem-sem-produtos-cadastrados.png' %}" alt="">
+                            <h4>Você ainda não adicionou um produto!</h4>
+                        </div>
+
+                        {% endfor %}
 
                     </div>
 
@@ -89,9 +89,11 @@
 
             </div>
 
-
-
         </div>
+
+
+
+    </div>
 
 
     </div>
