--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
 
               <div class="arredondar-linha">
                 <a class="dropdown-item" href="{% url 'perguntasFrequentes' %}">
-                  <i>Ajuda</i>
+                  <i>Ajuda e suporte</i>
                   <img src="{% static 'images/icone-ajuda-2.ico' %}" class="ml-1" alt="icone ajuda"></a>
               </div>
 
