inserido 'ver avaliaçoes de usuario' no template

--- a/templates/home/perguntasfrequentes.html
+++ b/templates/home/perguntasfrequentes.html
@@ -189,7 +189,7 @@
   </div>
 
   <div class="alert alert-warning mt-5" role="alert">
-    Não encontrou solução ou precisa de algum suporte? Mande um e-mail para <a href="#" class="alert-link">alugosac@alugo.com</a>
+    Não encontrou solução ou precisa de algum suporte? Mande um e-mail para <a href="#" class="alert-link">alugosac@alugo.com</a> Que responderemos em até 48 horas!
   </div>
 
 </section>
