--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -73,6 +73,7 @@
 
 				<div class="mb-3">
 					<h3>{{ identificador }}</h3>
+					<a href="{% url 'avaliacoes_usuario'  idUsuario=product.user.id %}">Ver avaliações deste locador</a>
 				</div>
 
 				<div class="mb-3">
