correção no campo estado

--- a/templates/products/alugar.html
+++ b/templates/products/alugar.html
@@ -38,7 +38,7 @@
         <input type="text" required  id="id_cidade" value="{{ cidade }}" name="id_cidade" />
 
         <p> Estado </p>
-        <input type="text" required  id="id_estado" value="{{ estado }}" name="id_estado" />
+        <input type="text" required  id="id_estado" maxlength="2" value="{{ estado }}" name="id_estado" />
 
         <p> Rua </p>
         <input type="text" required  id="id_rua" value="{{ rua }}" name="id_rua" />
