--- a/templates/user/avaliacoesPendentes.html
+++ b/templates/user/avaliacoesPendentes.html
@@ -6,6 +6,19 @@
 
 {% block main %}
  <div class="container">
+
+     <div>
+			{% for message in messages %}
+			<div class="alert alert-success alert-dismissible fade show" role="alert">
+				{{ message }}
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+
+			{% endfor %}
+		</div>
+     
     <div class="row">
        {% for avaliacao in avaliacoes %}
            
