--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -16,7 +16,7 @@
 <section id="section-home-pesquisar" class="container-fluid bg-light pt-4 pb-1 categoria">
     <div class="container">
         <form method="POST" id="form" action="pesquisa/" enctype="multipart/form-data">
-        {% csrf_token %}
+            {% csrf_token %}
             <input hidden value="{{categoria}}" name="categoria" id="categoriaSelecionada">
             <span class="input-group-append">
                 <input type="text" maxlength="100" class="form-control" name="nome" id="nomePesquisa">
@@ -24,56 +24,58 @@
                     <img src="{% static 'images/icone-lupa.png' %}" style="width: 30px;" alt="icone lupa">
                 </button>
             </span>
-        <form>
-            <div class="row my-4 col-12" style="border-radius: 20px;">
+            <form>
+                <div class="row my-4 col-12" style="border-radius: 20px;">
 
-                <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
-                    <a onclick="preencherCategoria('Ferramentas')">
-                        <img src="{% static 'images/icone-ferramentas.png' %}" alt="icone ferramenta">
-                        <br>
-                        <p class="m-0">Ferramentas</p>
-                    </a>
-                </div>
+                    <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
+                        <a onclick="preencherCategoria('Ferramentas')">
+                            <img src="{% static 'images/icone-ferramentas.png' %}" alt="icone ferramenta">
+                            <br>
+                            <p class="m-0">Ferramentas</p>
+                        </a>
+                    </div>
 
-                <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
-                    <a onclick="preencherCategoria('Moda e Beleza')">
-                        <img src="{% static 'images/icone-roupa.png' %}" alt="icone roupa">
-                        <br>
-                        <p class="m-0">Moda e Beleza</p>
-                    </a>
-                </div>
+                    <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
+                        <a onclick="preencherCategoria('Moda e Beleza')">
+                            <img src="{% static 'images/icone-roupa.png' %}" alt="icone roupa">
+                            <br>
+                            <p class="m-0">Moda e Beleza</p>
+                        </a>
+                    </div>
 
-                <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
-                    <a onclick="preencherCategoria('Eletrônicos')">
-                        <img src="{% static 'images/icone-eletronico.png' %}" alt="icone eletronico">
-                        <br>
-                        <p class="m-0">Eletrônicos</p>
-                    </a>
-                </div>
+                    <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
+                        <a onclick="preencherCategoria('Eletrônicos')">
+                            <img src="{% static 'images/icone-eletronico.png' %}" alt="icone eletronico">
+                            <br>
+                            <p class="m-0">Eletrônicos</p>
+                        </a>
+                    </div>
 
-                <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
-                    <a onclick="preencherCategoria('Automóveis')">
-                        <img src="{% static 'images/icone-carro.ico' %}" alt="icone carro">
-                        <br>
-                        <p class="m-0">Automóveis</p>
-                    </a>
-                </div>
+                    <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
+                        <a onclick="preencherCategoria('Automóveis')">
+                            <img src="{% static 'images/icone-carro.ico' %}" alt="icone carro">
+                            <br>
+                            <p class="m-0">Automóveis</p>
+                        </a>
+                    </div>
 
-                <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
-                    <a onclick="preencherCategoria('Construção')">
-                        <img src="{% static 'images/icone-construcao.ico' %}" style="margin-bottom: 9px;" alt="icone Construção">
-                        <br>
-                        <p class="m-0">Construção</p>
-                    </a>
-                </div>
+                    <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
+                        <a onclick="preencherCategoria('Construção')">
+                            <img src="{% static 'images/icone-construcao.ico' %}" style="margin-bottom: 9px;"
+                                alt="icone Construção">
+                            <br>
+                            <p class="m-0">Construção</p>
+                        </a>
+                    </div>
 
-                <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
-                    <a onclick="preencherCategoria('Agro e Indústria')">
-                        <img src="{% static 'images/icone-industria.ico' %}" style="width: 60px;" alt="icone Indústria">
-                        <br>
-                        <p class="m-0">Agro e Indústria</p>
-                    </a>
-                </div>
+                    <div class="col-md-2 col-6 text-center aumentar-tamanho-mouse mt-3">
+                        <a onclick="preencherCategoria('Agro e Indústria')">
+                            <img src="{% static 'images/icone-industria.ico' %}" style="width: 60px;"
+                                alt="icone Indústria">
+                            <br>
+                            <p class="m-0">Agro e Indústria</p>
+                        </a>
+                    </div>
 </section>
 
 <section class="container mt-5">
@@ -86,7 +88,8 @@
                 <image src="{{ product.get_photo_url }}" class="rounded tamanho-fixo-imagens"> </image>
                 <p class="h5 mt-2 mb-1 ml-1">{{ product.nome }}</p>
                 <p class="m-0 ml-1" style="font-size: 20px;"><strong>R$ {{ product.preco }}</strong></p>
-                <p class="m-0 ml-1" style="font-size: 15px; color: rgb(153, 153, 153); font-weight: 500;">{{ product.estado }}<span>, {{ product.cidade }}</span></p>
+                <p class="m-0 ml-1" style="font-size: 15px; color: rgb(153, 153, 153); font-weight: 500;">
+                    {{ product.estado }}<span>, {{ product.cidade }}</span></p>
             </a>
         </div>
         {% endfor %}
@@ -94,10 +97,48 @@
     </div>
 </section>
 
+<section class="container-fluid bg-light p-5">
+    <div class="container">
+        <h4>Sobre o Alugo</h4>
+        <div class="mt-5 row py-4 py-sm-0 ml-3 justify-content-between">
+
+            <div class="row bg-primary p-5 col-5 align-items-center" style=" border-radius: 80px;">
+                <div class="col-6">
+                    <h5 class="text-white">Plataforma de Aluguéis de bens</h5>
+                </div>
+                <div class="col-6">
+                    <img class="" style="width: 200px; height: 200px; border-radius: 80px;" src="{% static 'images/icon-256x256.png' %}" alt="">
+                </div>
+                <div class="mt-5">
+                    <h6 class="text-white"></h6>
+                </div>
+            </div>
+
+            <div class="row bg-danger p-5 col-5 align-items-center" style=" border-radius: 80px;">
+                <div class="col-6">
+                    <h5 class="text-white">Tem algum produto parado na sua residência e não sabe o que fazer?</h5>
+                </div>
+                <div class="col-6">
+                    <img class="rounded" style="width: 200px; height: 200px;"  src="{% static 'images/alugar-carro.jpg' %}" alt="">
+                </div>
+                <div class="mt-5">
+                    <h6 class="text-white">No Alugo você pode anunciar seu produto para outra pessoa alugar e ainda
+                        receber
+                        por isso!</h6>
+                </div>
+            </div>
+
+
+
+
+        </div>
+    </div>
+</section>
+
 <script type="text/javascript">
     document.getElementById("nomePesquisa").placeholder = 'Estou procurando por...';
 
-    function preencherCategoria(categoria){
+    function preencherCategoria(categoria) {
         document.getElementById('categoriaSelecionada').value = categoria;
         document.getElementById('btnForm').click();
     }
