--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -108,8 +108,11 @@
 			</div>
 		</div>
 
-		<div class="col-12 col-lg-9 mt-xl-5 mt-1 text-center" style="color: rgb(74, 74, 74); font-weight: bold;">
-			<h5>{{ product.descricao }} </h5>
+		<div class="col-12 mt-5 mb-3">
+			<h5>Descrição</h5>
+			<div style="color: rgb(74, 74, 74); font-weight: bold;">
+				<h5 class="mt-3 ml-2">{{ product.descricao }}</h5>
+			</div>
 		</div>
 
 		<div class="col-12 mt-5 mb-3">
