--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
   <script type="text/javascript" src="{% static 'js/cidades-estados.js' %}"></script>
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container nav-alugo">
 
       <a class="navbar-brand aumentar-tamanho-mouse" href="{% url 'home' %}">
